# WolfpackCloud-monitoring

./: .env.example  .gitignore  .local_robot_token  .yamllint.yml  LICENSE  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
.cursor/: hooks.json
.cursor/hooks/: check-wiki-sync.sh
.cursor/skills/sync-wiki-with-code/: SKILL.md
.github/workflows/: cd.yml  ci.yml  deploy.yml  wiki.yml
agent/: install.sh  uninstall.sh
agent/ansible/: ansible.cfg  inventory.example.yml  playbook.yml
agent/ansible/roles/monitoring/defaults/: main.yml
agent/telegraf/: telegraf.conf.template
client/: Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  tsconfig.node.json  vite.config.ts
client/src/: style.css
client/src/api/: auth.ts  client.ts  index.ts  pairing.ts  robots.ts
client/src/components/: ExternalLinks.vue  RobotCard.vue
client/src/layouts/: DefaultLayout.vue
client/src/pages/: DashboardPage.vue  LoginPage.vue  PairingPage.vue  RegisterPage.vue  RobotDetailPage.vue  RobotsPage.vue  index.ts
client/src/router/: index.ts
client/src/stores/: auth.ts  index.ts  robots.ts
client/src/types/: index.ts
scripts/: local-install.sh  local-uninstall.sh
server/api/: Dockerfile  entrypoint.sh  requirements-dev.txt  requirements.txt
server/api/alembic/: env.py
server/api/alembic/versions/: 001_initial_schema.py  002_add_external_auth_ids.py
server/api/app/: __init__.py  config.py  database.py  deps.py  main.py  models.py  schemas.py  tasks.py
server/api/app/routers/: __init__.py  auth.py  metrics.py  pairing.py  robots.py
server/api/app/services/: external_auth.py
server/api/tests/: conftest.py  test_metrics.py  test_pairing.py
server/grafana/dashboards/: robot-detail.json  robots-overview.json
server/influxdb/: init.sh
server/nginx/: nginx.conf
server/postgres/: init.sql
server/superset/: superset_config.py
server/superset/docker/: docker-bootstrap.sh  docker-init.sh  provision.py  requirements-local.txt
tests/: __init__.py  conftest.py
wiki/: API-Reference.md  Architecture.md  CI-CD.md  Deployment-Options.md  Grafana-Dashboards.md  Home.md  Installation.md  Local-Testing.md  Server-Setup.md  Superset-Dashboards.md  Troubleshooting.md  Web-App.md  _Sidebar.md
(+6 files in other folders)
